--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@ git config --global init.defaultBranch main</code></pre>
         <h2>Comandos Git</h2>
 
         <h3>git init</h3>
-        <p>Inicializa um novo repositório Git.</p>
+        <p>•	Inicializa um novo repositório Git em um diretório existente. Cria um subdiretório .git que contém todos os arquivos necessários do repositório - um esqueleto de um novo repositório Git.</p>
         <pre><code>git init</code></pre>
 
         <h3>git clone</h3>
-        <p>Clona um repositório existente.</p>
+        <p>•	Cria uma cópia (clone) de um repositório Git existente em um novo diretório. Ele também configura o repositório remoto original como origin.</p>
         <pre><code>git clone https://github.com/usuario/repositorio.git</code></pre>
 
         <h3>git branch</h3>
-        <p>Gerencia branches no repositório.</p>
+        <p>Gera, lista ou deleta branches no repositório. Branches permitem que você trabalhe em diferentes versões de um projeto simultaneamente.</p>
         <pre><code>git branch</code></pre>
         <p>Para criar uma nova branch:</p>
         <pre><code>git branch nome-da-branch</code></pre>
 
         <h3>git checkout</h3>
-        <p>Troca de branch ou restaura arquivos no repositório.</p>
+        <p>•	Troca entre branches ou restaura arquivos na árvore de trabalho. Pode ser usado para criar uma nova branch e trocá-la ao mesmo tempo.</p>
         <pre><code>git checkout nome-da-branch</code></pre>
 
         <h3>git status</h3>
@@ -77,37 +77,37 @@ git config --global init.defaultBranch main</code></pre>
         <pre><code>git status</code></pre>
 
         <h3>git diff</h3>
-        <p>Mostra as diferenças entre os arquivos no repositório.</p>
+        <p>•	•	Mostra as diferenças entre commits, branches, arquivos no índice de staging e no diretório de trabalho. Útil para ver o que mudou antes de fazer um commit.</p>
         <pre><code>git diff</code></pre>
 
         <h3>git add</h3>
-        <p>Adiciona arquivos ao índice (staging area).</p>
+        <p>Adiciona alterações no diretório de trabalho ao índice de staging, preparando-as para serem incluídas no próximo commit. Pode adicionar arquivos específicos ou todas as alterações.</p>
         <pre><code>git add arquivo.txt</code></pre>
         <p>Para adicionar todos os arquivos modificados:</p>
         <pre><code>git add .</code></pre>
 
         <h3>git commit</h3>
-        <p>Registra as mudanças no repositório.</p>
+        <p>Grava as mudanças no índice de staging em um novo commit. É necessário fornecer uma mensagem de commit que descreve as mudanças feitas.</p>
         <pre><code>git commit -m "Mensagem do commit"</code></pre>
 
         <h3>git push</h3>
-        <p>Envia as mudanças para o repositório remoto.</p>
+        <p>•	Envia commits do repositório local para um repositório remoto. Atualiza o repositório remoto com as alterações feitas localmente.</p>
         <pre><code>git push origin nome-da-branch</code></pre>
 
         <h3>git pull</h3>
-        <p>Atualiza o repositório local com as mudanças do repositório remoto.</p>
+        <p>•	Baixa commits de um repositório remoto e os integra ao branch atual. É uma combinação de git fetch e git merge.</p>
         <pre><code>git pull origin nome-da-branch</code></pre>
 
         <h3>git revert</h3>
-        <p>Desfaz um commit específico.</p>
+        <p>•	Cria um novo commit que desfaz as mudanças de um commit anterior. É utilizado para desfazer mudanças sem alterar o histórico de commits.</p>
         <pre><code>git revert id-do-commit</code></pre>
 
         <h3>git merge</h3>
-        <p>Combina mudanças de diferentes branches.</p>
+        <p>•	Combina alterações de diferentes branches em uma única branch. É usado para integrar mudanças de uma branch (por exemplo, uma branch de feature) de volta à branch principal.</p>
         <pre><code>git merge nome-da-branch</code></pre>
 
         <h3>git stash</h3>
-        <p>Armazena mudanças temporariamente.</p>
+        <p>•	Armazena temporariamente mudanças não commitadas para que você possa voltar a um estado limpo de trabalho. Pode ser utilizado para salvar mudanças sem fazer um commit.</p>
         <pre><code>git stash</code></pre>
         <p>Para aplicar mudanças armazenadas:</p>
         <pre><code>git stash apply</code></pre>
@@ -117,7 +117,7 @@ git config --global init.defaultBranch main</code></pre>
         <pre><code>git rm arquivo.txt</code></pre>
 
         <h3>git config</h3>
-        <p>Configura opções de usuário e repositório.</p>
+        <p>•	Define configurações de usuário e opções de repositório. Pode ser utilizado para configurar opções globais ou específicas de um repositório.</p>
         <pre><code>git config --global user.name "Seu Nome"</code></pre>
 
         <h3>git reset</h3>
@@ -125,11 +125,11 @@ git config --global init.defaultBranch main</code></pre>
         <pre><code>git reset --hard</code></pre>
 
         <h3>git remote</h3>
-        <p>Gerencia repositórios remotos.</p>
+        <p>Gerencia repositórios remotos.  Pode ser usado para adicionar, listar e remover repositórios remotos.</p>
         <pre><code>git remote add origin https://github.com/usuario/repositorio.git</code></pre>
 
         <h3>git fetch</h3>
-        <p>Baixa mudanças do repositório remoto sem aplicá-las.</p>
+        <p>•	Baixa objetos e refs de um repositório remoto sem integrá-los à branch atual. É usado para atualizar o repositório local com as mudanças do repositório remoto.</p>
         <pre><code>git fetch origin</code></pre>
 
         <h3>git show</h3>
