--- a/index.html
+++ b/index.html
@@ -152,5 +152,7 @@ git config --global init.defaultBranch main</code></pre>
         <p>Marca commits com uma tag específica.</p>
         <pre><code>git tag -a v1.0 -m "Versão 1.0"</code></pre>
     </section>
+    <p><a href="video.html">Ir para a página do vídeo.</a></p>
+    <p><a href="audio.html">ir para a página do aúdio.</a></p>
 </body>
 </html>
