--- a/audio.html
+++ b/audio.html
@@ -11,11 +11,11 @@
     <p>A seguir, apresenta-se um áudio que contém uma exposição detalhada sobre a motivação para a utilização do Git no contexto do projeto. Este recurso é fundamental para entender as vantagens e as aplicações práticas do sistema de controle de versão Git, destacando sua importância no desenvolvimento de software colaborativo.</p>
     
     <audio controls>
-        <source src="C:\Users\Wagner\wagner2196.github.io\audio.mp3" type="audio/mp3">
-
+        <source src=C:\Users\Wagner\wagner2196.github.io\audio\audio.mp3" type="audio/mpeg">
         Seu navegador não suporta o elemento de áudio.
     </audio>
-    <p><a href="video.html">Voltar para a página principal</a></p>
+    
+    <p><a href="video.html">Voltar para a página de vídeo</a></p>
     <p><a href="index.html">Voltar para a página principal</a></p>
 </body>
 </html>
