--- a/audio.html
+++ b/audio.html
@@ -11,8 +11,8 @@
     <p>A seguir, apresenta-se um áudio que contém uma exposição detalhada sobre a motivação para a utilização do Git no contexto do projeto. Este recurso é fundamental para entender as vantagens e as aplicações práticas do sistema de controle de versão Git, destacando sua importância no desenvolvimento de software colaborativo.</p>
     
     <audio controls>
-        <source src="C:\Users\Wagner\wagner2196.github.io\audio\audio.ogg" type="audio/ogg">
-        <source src="C:\Users\Wagner\wagner2196.github.io\audio\audio.mp3" type="audio/mpeg">
+        <source src="audio/audio.ogg" type="audio/ogg">
+        <source src="audio/audio.mp3" type="audio/mpeg">
         Seu navegador não suporta o elemento de áudio.
     </audio>
     
