--- a/video.html
+++ b/video.html
@@ -16,5 +16,6 @@
     </video>
     
     <p><a href="index.html">Voltar para a página principal</a></p>
+    <p><a href="index.html">Voltar para a página principal</a></p>
 </body>
 </html>
