--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
     <p>A seguir, você encontrará um vídeo criado pela equipe, explicando e exemplificando o uso e a função de pelo menos 5 comandos Git:</p>
     
     <video controls width="600">
-        <source src="caminho/para/o/video_git.mp4" type="video/mp4">
+        <source src="C:\Users\Wagner\wagner2196.github.io\video\Fortnite 2024.06.06 - 22.50.26.02.DVR.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
     </video>
     
