--- a/video.html
+++ b/video.html
@@ -61,7 +61,7 @@
     <p>A seguir, você encontrará um vídeo criado pela equipe, explicando e exemplificando o uso e a função de pelo menos 5 comandos Git:</p>
     
     <video controls width="600">
-        <source src="video/Desvende o GitHub_ Ferramenta Essencial Programadores!.mp4" type="video/mp4">
+        <source src="video/video.mp4" type="video/mp4">
         Your browser does not support the video element.
     </video>
     
