--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ git config --global user.email "seuemail@example.com"
 git config --global init.defaultBranch main</code></pre>
         <p>Para clonar um repositório GitHub:</p>
         <pre><code>git clone https://github.com/usuario/repositorio.git</code></pre>
+        <img src="imagens/Config.jpg" alt="Configurando">
+
     </section>
 
     <section>
@@ -57,6 +59,7 @@ git config --global init.defaultBranch main</code></pre>
         <h3>git init</h3>
         <p>•	Inicializa um novo repositório Git em um diretório existente. Cria um subdiretório .git que contém todos os arquivos necessários do repositório - um esqueleto de um novo repositório Git.</p>
         <pre><code>git init</code></pre>
+        <img src="imagens/GitInit.png" alt="Iniciando Novo Repositório">
 
         <h3>git clone</h3>
         <p>•	Cria uma cópia (clone) de um repositório Git existente em um novo diretório. Ele também configura o repositório remoto original como origin.</p>
@@ -67,28 +70,34 @@ git config --global init.defaultBranch main</code></pre>
         <pre><code>git branch</code></pre>
         <p>Para criar uma nova branch:</p>
         <pre><code>git branch nome-da-branch</code></pre>
+        <img src="imagens/GitBranch.png" alt="lista">
 
         <h3>git checkout</h3>
         <p>•	Troca entre branches ou restaura arquivos na árvore de trabalho. Pode ser usado para criar uma nova branch e trocá-la ao mesmo tempo.</p>
         <pre><code>git checkout nome-da-branch</code></pre>
+        <img src="imagens/GitCheckout.png" alt="Checkout">
 
         <h3>git status</h3>
         <p>Mostra o estado dos arquivos no repositório.</p>
         <pre><code>git status</code></pre>
+        <img src="imagens/GitStatus.png" alt="Status Repositório">
 
         <h3>git diff</h3>
         <p>•	•	Mostra as diferenças entre commits, branches, arquivos no índice de staging e no diretório de trabalho. Útil para ver o que mudou antes de fazer um commit.</p>
         <pre><code>git diff</code></pre>
+        <img src="imagens/GitDiff.png" alt="Status Repositório">
 
         <h3>git add</h3>
         <p>Adiciona alterações no diretório de trabalho ao índice de staging, preparando-as para serem incluídas no próximo commit. Pode adicionar arquivos específicos ou todas as alterações.</p>
         <pre><code>git add arquivo.txt</code></pre>
         <p>Para adicionar todos os arquivos modificados:</p>
         <pre><code>git add .</code></pre>
+        <img src="imagens/GitAdd.png" alt="Adicionando Staging Repositório">
 
         <h3>git commit</h3>
         <p>Grava as mudanças no índice de staging em um novo commit. É necessário fornecer uma mensagem de commit que descreve as mudanças feitas.</p>
         <pre><code>git commit -m "Mensagem do commit"</code></pre>
+        <img src="imagens/GitCommit.png" alt="Salvando Mudanças no Repositório">
 
         <h3>git push</h3>
         <p>•	Envia commits do repositório local para um repositório remoto. Atualiza o repositório remoto com as alterações feitas localmente.</p>
@@ -101,28 +110,34 @@ git config --global init.defaultBranch main</code></pre>
         <h3>git revert</h3>
         <p>•	Cria um novo commit que desfaz as mudanças de um commit anterior. É utilizado para desfazer mudanças sem alterar o histórico de commits.</p>
         <pre><code>git revert id-do-commit</code></pre>
+        
 
         <h3>git merge</h3>
         <p>•	Combina alterações de diferentes branches em uma única branch. É usado para integrar mudanças de uma branch (por exemplo, uma branch de feature) de volta à branch principal.</p>
         <pre><code>git merge nome-da-branch</code></pre>
+        <img src="imagens/GitMerge.png" alt="alterações diferente">
 
         <h3>git stash</h3>
         <p>•	Armazena temporariamente mudanças não commitadas para que você possa voltar a um estado limpo de trabalho. Pode ser utilizado para salvar mudanças sem fazer um commit.</p>
         <pre><code>git stash</code></pre>
         <p>Para aplicar mudanças armazenadas:</p>
         <pre><code>git stash apply</code></pre>
+        <img src="imagens/Gitstash.png" alt="Armazenamento temporario">
 
         <h3>git rm</h3>
         <p>Remove arquivos do repositório.</p>
         <pre><code>git rm arquivo.txt</code></pre>
+        <img src="imagens/Gitrm.png" alt="Removendo Repositório">
 
         <h3>git config</h3>
         <p>•	Define configurações de usuário e opções de repositório. Pode ser utilizado para configurar opções globais ou específicas de um repositório.</p>
         <pre><code>git config --global user.name "Seu Nome"</code></pre>
+        <img src="imagens/config2.png" alt="config">
 
         <h3>git reset</h3>
         <p>Reseta mudanças no índice e na árvore de trabalho.</p>
         <pre><code>git reset --hard</code></pre>
+        <img src="imagens/GitReset.png" alt="Reset">
 
         <h3>git remote</h3>
         <p>Gerencia repositórios remotos.  Pode ser usado para adicionar, listar e remover repositórios remotos.</p>
@@ -135,22 +150,27 @@ git config --global init.defaultBranch main</code></pre>
         <h3>git show</h3>
         <p>Mostra detalhes sobre um objeto Git (commit, tag, etc.).</p>
         <pre><code>git show id-do-commit</code></pre>
+        <img src="imagens/GitShow.png" alt="Mostrando o Conteudo no index.html">
 
         <h3>git help</h3>
         <p>Mostra ajuda sobre comandos Git.</p>
         <pre><code>git help comando</code></pre>
+        <img src="imagens/GitHelp.png" alt="Ajuda">
 
         <h3>git rebase</h3>
         <p>Reaplica commits em cima de outra base.</p>
         <pre><code>git rebase nome-da-branch</code></pre>
+        <img src="imagens/GitRebase.png" alt="Ignora o erro ">
 
         <h3>git blame</h3>
         <p>Mostra o autor de cada linha de um arquivo.</p>
         <pre><code>git blame arquivo.txt</code></pre>
+        <img src="imagens/GitBlame.png" alt="mostrando o Autor de cada linha">
 
         <h3>git tag</h3>
         <p>Marca commits com uma tag específica.</p>
         <pre><code>git tag -a v1.0 -m "Versão 1.0"</code></pre>
+        <img src="imagens/GItTag.png" alt="Marcando com tag Repositório">
     </section>
     <p><a href="video.html">Ir para a página do vídeo.</a></p>
     <p><a href="audio.html">ir para a página do aúdio.</a></p>
