--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ git config --global init.defaultBranch main</code></pre>
         <h3>git init</h3>
         <p>•	Inicializa um novo repositório Git em um diretório existente. Cria um subdiretório .git que contém todos os arquivos necessários do repositório - um esqueleto de um novo repositório Git.</p>
         <pre><code>git init</code></pre>
-        <img src="imagens/GitInit.png" alt="Iniciando Novo Repositório">
+        <img src="C:\Users\Wagner\wagner2196.github.io\imagens\GitInit.png" alt="Iniciando Novo Repositório">
 
         <h3>git clone</h3>
         <p>•	Cria uma cópia (clone) de um repositório Git existente em um novo diretório. Ele também configura o repositório remoto original como origin.</p>
